[package]
name = "test-gates"
version = "0.1.0"
edition = "2021"
authors = ["Test Gates Contributors"]
description = "A Rust library for conditionally running tests based on environment variables"
license = "MIT"
repository = "https://github.com/username/test-gates"
readme = "README.md"
keywords = ["testing", "environment", "conditional", "test", "macro"]
categories = ["development-tools::testing"]

[lib]
name = "test_gates"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }